# ollama-auth

./: .gitignore  Dockerfile  README.md  docker-compose.coolify.yml  docker-compose.yml  main.py  pyproject.toml
.github/workflows/: docker.yml
ollama_auth/: __init__.py  app.py  auth.py  config.py  proxy.py
tests/: test_auth.py  test_proxy.py
