[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "ollama-auth"
version = "0.1.0"
description = "Ollama authentication proxy for self-hosted deployments"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "Flask>=2.3",
    "requests>=2.31",
]

[project.optional-dependencies]
test = [
    "pytest>=8.0"
]
